--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: CursusIndex/_build/html
+        publish_dir: ./_build/html
         
   build-jupyter-lite:
     needs: build-and-deploy-book
