--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -72,7 +72,7 @@ jobs:
         pip install -r .github/requirements-Lite.txt
     - name: Build the JupyterLite site
       run: |
-        jupyter lite build --lite-dir Lite  --output-dir dist/
+        jupyter lite build  --output-dir dist/
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3
       with:
