--- a/_toc.yml
+++ b/_toc.yml
@@ -1,5 +1,5 @@
 format: jb-book
-root: README
+root: intro
 chapters:
 - file: Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers
 - file: NanoimprintedDFB
