--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,12 +18,12 @@ jobs:
         pip install -r .github/requirements-Book.txt
     - name: Build the Jupyterbook website
       run: |
-        jb build ./
+        jb build ./files/
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_build/html
+        publish_dir: ./files/_build/html
         
   build-and-deploy-book-pdf:
     needs: build-and-deploy-book
@@ -49,13 +49,13 @@ jobs:
           xindy
     - name: Build the Jupyterbook website
       run: |
-        jb build ./ --builder pdflatex
-        # mv ./_build/latex/python.pdf ./_build/latex/Coupled-Wave-Theory_DFB-Lasers.pdf
+        jb build ./files/ --builder pdflatex
+        # mv ./files/_build/latex/python.pdf ./files/_build/latex/Coupled-Wave-Theory_DFB-Lasers.pdf
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_build/latex/
+        publish_dir: ./files/_build/latex/
         
   build-jupyter-lite:
     needs: build-and-deploy-book
@@ -70,13 +70,6 @@ jobs:
     - name: Install the dependencies
       run: |
         pip install -r .github/requirements-Lite.txt
-    - name: Copy common files
-      run: |
-        mkdir files
-        cp Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb files/Kogelnik-Shank_Coupled-Wave-Theory_DFB-Lasers.ipynb
-        cp NanoimprintedDFB.ipynb files/NanoimprintedDFB.ipynb
-        cp -r data files/data
-        cp -r images files/images
     - name: Build the JupyterLite site
       run: |
         jupyter lite build  --output-dir dist/
