--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,6 +56,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./files/_build/latex/
+        destination_dir: Latex
         
   build-jupyter-lite:
     needs: build-and-deploy-book
