--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,7 +49,7 @@ jobs:
           xindy
     - name: Build the Jupyterbook website
       run: |
-        jb build --toc _tocpdf.yml --builder pdflatex --all files/  
+        jb build --toc files/_tocpdf.yml --builder pdflatex --all files/  
         mv ./files/_build/latex/python.pdf ./files/_build/latex/Coupled-Wave-Theory_DFB-Lasers.pdf
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3
