--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,9 +47,11 @@ jobs:
           texlive-xetex             \
           latexmk                   \
           xindy
-    - name: Build the Jupyterbook website
+    - name: Build the Jupyterbook pdf
       run: |
-        jb build --toc _tocpdf.yml --builder pdflatex --all files/  
+        mv ./files/_toc.yml ./files/_tochtml.yml
+        mv ./files/_tocpdf.yml ./files/_toc.yml
+        jb build --builder pdflatex --all files/  
         mv ./files/_build/latex/python.pdf ./files/_build/latex/Coupled-Wave-Theory_DFB-Lasers.pdf
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3
