update title page

--- a/files/_config.yml
+++ b/files/_config.yml
@@ -1,5 +1,5 @@
 title: Coupled Wave Theory of Distributed Feedback Lasers
-author: Jan Genoe, Iakov Goldberg, Nirav Annavarapu, Robert Gehlhaar
+author: Jan Genoe, Iakov Goldberg, Nirav Annavarapu
 logo: images/logo.png
 description: calculations of distributed feedback lasers based on coupled wave theory
 only_build_toc_files: true
